# CHomP

./: CMakeLists.txt  README.md
include/chomp/: Field.h  Ring.h
julia/: CMakeLists.txt  Fieldjl.cpp  Ringjl.cpp
